team content image alignment on mobile fix

--- a/css/main.css
+++ b/css/main.css
@@ -184,9 +184,10 @@ div#card{
 }
 
 
+
 #team-content img {
-	height: 160px;
-	width: auto;
+	width: 90%;
+	height: auto;
 }
 
 
